write functions for different situations

--- a/book/design/concrete/moment_normalforce_interaction.ipynb
+++ b/book/design/concrete/moment_normalforce_interaction.ipynb
@@ -86,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "49.59274977420145 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def grenssituatie_0(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta):\n",
     "    \"\"\"\n",
@@ -142,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -209,43 +201,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_u2 = 138.77 mm\n",
-      "e_c2 = 71.04\n",
-      "eps_c2 = 0.00175\n",
-      "N_st2 = 2.714e+05 N\n",
-      "N_sc2 = 2.714e+05 N\n",
-      "N_c2 = 3.469e+05 N\n",
-      "M_Rd2 = 78.9 kNm\n",
-      "N_Rd2 = 346.9 kN\n"
+      "78.9300044478487 346.9162995594714\n"
      ]
     }
    ],
    "source": [
-    "x_u2 = eps_cu3 * (h - a) / (eps_s + eps_cu3)\n",
-    "e_c2 = h/2 - beta * x_u2\n",
-    "eps_st2 = eps_s\n",
-    "N_st2 = E_s * eps_st2 * A_s\n",
-    "eps_sc2 = min(eps_s, eps_cu3 * (x_u2 - a) / x_u2)\n",
-    "N_sc2 = E_s * eps_sc2 * A_s\n",
-    "N_c2 = alfa * b * f_cd * x_u2\n",
-    "M_Rd2 = (N_st2*e_st + N_sc2 * e_sc + N_c2 * e_c2) / 1e6\n",
-    "N_Rd2 = (- N_st2 + N_sc2 + N_c2) / 1e3\n",
+    "def grenssituatie_2(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s):\n",
+    "    \"\"\"\n",
+    "    Calculate the design moment capacity (M_Rd2) and design axial force capacity (N_Rd2) \n",
+    "    for a given concrete section with reinforcement considering specific strain conditions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    c (float): Cover to reinforcement (mm)\n",
+    "    phi_bgl (float): Diameter of the main longitudinal reinforcement (mm)\n",
+    "    phi_hw (float): Diameter of the stirrups (shear reinforcement) (mm)\n",
+    "    n_hw (int): Number of stirrups in the considered section\n",
+    "    f_yd (float): Design yield strength of the reinforcement (N/mm^2)\n",
+    "    alfa (float): Partial safety factor or strength reduction factor for concrete\n",
+    "    b (float): Width of the concrete section (mm)\n",
+    "    f_cd (float): Design compressive strength of concrete (N/mm^2)\n",
+    "    h (float): Overall depth of the concrete section (mm)\n",
+    "    beta (float): Factor accounting for the distribution of strains or stresses\n",
+    "    eps_s (float): Strain in the reinforcement\n",
+    "    eps_cu3 (float): Ultimate strain in the concrete\n",
+    "    E_s (float): Modulus of elasticity of the reinforcement (N/mm^2)\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: M_Rd2 (float), N_Rd2 (float)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate intermediate values\n",
+    "    a = c + phi_bgl + phi_hw / 2\n",
+    "    A_s = 1 / 4 * np.pi * phi_hw ** 2 * n_hw\n",
+    "    x_u2 = eps_cu3 * (h - a) / (eps_s + eps_cu3)\n",
+    "    e_c2 = h / 2 - beta * x_u2\n",
+    "    eps_st2 = eps_s\n",
+    "    N_st2 = E_s * eps_st2 * A_s\n",
+    "    eps_sc2 = min(eps_s, eps_cu3 * (x_u2 - a) / x_u2)\n",
+    "    N_sc2 = E_s * eps_sc2 * A_s\n",
+    "    N_c2 = alfa * b * f_cd * x_u2\n",
+    "    \n",
+    "    # Calculate outputs\n",
+    "    e_st = e_sc = h / 2 - a\n",
+    "    M_Rd2 = (N_st2 * e_st + N_sc2 * e_sc + N_c2 * e_c2) / 1e6  # kNm\n",
+    "    N_Rd2 = (- N_st2 + N_sc2 + N_c2) / 1e3  # kN\n",
+    "    \n",
+    "    return M_Rd2, N_Rd2\n",
     "\n",
-    "print(f'x_u2 = {x_u2:.2f} mm')\n",
-    "print(f'e_c2 = {e_c2:.2f}')\n",
-    "print(f'eps_c2 = {eps_c2:.5f}')\n",
-    "print(f'N_st2 = {N_st2:.3e} N')\n",
-    "print(f'N_sc2 = {N_sc2:.3e} N')\n",
-    "print(f'N_c2 = {N_c2:.3e} N')\n",
-    "print(f'M_Rd2 = {M_Rd2:.1f} kNm')\n",
-    "print(f'N_Rd2 = {N_Rd2:.1f} kN')"
+    "M_Rd2, N_Rd2 = grenssituatie_2(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s)\n",
+    "print(M_Rd2, N_Rd2)"
    ]
   },
   {
@@ -257,43 +268,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x_u3 = 250.00 mm\n",
-      "e_c3 = 27.78\n",
-      "eps_sc3 = 0.00217\n",
-      "N_st3 = 4.368e+04 N\n",
-      "N_sc3 = 2.714e+05 N\n",
-      "N_c3 = 6.250e+05 N\n",
-      "M_Rd3 = 40.1 kNm\n",
-      "N_Rd3 = 940.1 kN\n"
+      "40.13657454182553 940.112576233172\n"
      ]
     }
    ],
    "source": [
-    "x_u3 = h\n",
-    "e_c3 = h/2 - beta * x_u3\n",
-    "eps_st3 = min(eps_s, (eps_cu3 * a) / x_u3)\n",
-    "N_st3 = E_s * eps_st3 * A_s\n",
-    "eps_sc3 = min(eps_s, eps_cu3 * (x_u3 - a) / x_u3)\n",
-    "N_sc3 = E_s * eps_sc3 * A_s\n",
-    "N_c3 = alfa * b * f_cd * x_u3\n",
-    "M_Rd3 = (-N_st3*e_st + N_sc3 * e_sc + N_c3 * e_c3) / 1e6\n",
-    "N_Rd3 = (N_st3 + N_sc3 + N_c3) / 1e3\n",
+    "def grenssituatie_3(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s):\n",
+    "    \"\"\"\n",
+    "    Calculate the design moment capacity (M_Rd3) and design axial force capacity (N_Rd3) \n",
+    "    for a given concrete section with reinforcement considering specific strain conditions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    c (float): Cover to reinforcement (mm)\n",
+    "    phi_bgl (float): Diameter of the main longitudinal reinforcement (mm)\n",
+    "    phi_hw (float): Diameter of the stirrups (shear reinforcement) (mm)\n",
+    "    n_hw (int): Number of stirrups in the considered section\n",
+    "    f_yd (float): Design yield strength of the reinforcement (N/mm^2)\n",
+    "    alfa (float): Partial safety factor or strength reduction factor for concrete\n",
+    "    b (float): Width of the concrete section (mm)\n",
+    "    f_cd (float): Design compressive strength of concrete (N/mm^2)\n",
+    "    h (float): Overall depth of the concrete section (mm)\n",
+    "    beta (float): Factor accounting for the distribution of strains or stresses\n",
+    "    eps_s (float): Strain in the reinforcement\n",
+    "    eps_cu3 (float): Ultimate strain in the concrete\n",
+    "    E_s (float): Modulus of elasticity of the reinforcement (N/mm^2)\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: M_Rd3 (float), N_Rd3 (float)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate intermediate values\n",
+    "    a = c + phi_bgl + phi_hw / 2\n",
+    "    A_s = 1 / 4 * np.pi * phi_hw ** 2 * n_hw\n",
+    "    x_u3 = h\n",
+    "    e_c3 = h / 2 - beta * x_u3\n",
+    "    eps_st3 = min(eps_s, (eps_cu3 * a) / x_u3)\n",
+    "    N_st3 = E_s * eps_st3 * A_s\n",
+    "    eps_sc3 = min(eps_s, eps_cu3 * (x_u3 - a) / x_u3)\n",
+    "    N_sc3 = E_s * eps_sc3 * A_s\n",
+    "    N_c3 = alfa * b * f_cd * x_u3\n",
+    "    \n",
+    "    # Calculate outputs\n",
+    "    e_st = e_sc = h / 2 - a\n",
+    "    M_Rd3 = (-N_st3 * e_st + N_sc3 * e_sc + N_c3 * e_c3) / 1e6  # kNm\n",
+    "    N_Rd3 = (N_st3 + N_sc3 + N_c3) / 1e3  # kN\n",
+    "    \n",
+    "    return M_Rd3, N_Rd3\n",
     "\n",
-    "print(f'x_u3 = {x_u3:.2f} mm')\n",
-    "print(f'e_c3 = {e_c3:.2f}')\n",
-    "print(f'eps_sc3 = {eps_sc3:.5f}')\n",
-    "print(f'N_st3 = {N_st3:.3e} N')\n",
-    "print(f'N_sc3 = {N_sc3:.3e} N')\n",
-    "print(f'N_c3 = {N_c3:.3e} N')\n",
-    "print(f'M_Rd3 = {M_Rd3:.1f} kNm')\n",
-    "print(f'N_Rd3 = {N_Rd3:.1f} kN')"
+    "M_Rd3, N_Rd3 = grenssituatie_3(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s)\n",
+    "print(M_Rd3, N_Rd3)"
    ]
   },
   {
@@ -305,33 +335,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N_st4 = 2.714e+05 N\n",
-      "N_sc4 = 2.714e+05 N\n",
-      "N_c4 = 8.333e+05 N\n",
-      "M_Rd4 = 0.0 kNm\n",
-      "N_Rd4 = 1376.2 kN\n"
+      "0 1376.2005438736496\n"
      ]
     }
    ],
    "source": [
-    "N_sc4 = E_s * eps_s * A_s\n",
-    "N_st4 = N_sc4\n",
-    "N_c4 = b * f_cd * h\n",
-    "M_Rd4 = 0\n",
-    "N_Rd4 = (N_st4 + N_sc4 + N_c4) / 1e3\n",
+    "def grenssituatie_4(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s):\n",
+    "    \"\"\"\n",
+    "    Calculate the design moment capacity (M_Rd4) and design axial force capacity (N_Rd4) \n",
+    "    for a given concrete section with reinforcement considering specific strain conditions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    c (float): Cover to reinforcement (mm)\n",
+    "    phi_bgl (float): Diameter of the main longitudinal reinforcement (mm)\n",
+    "    phi_hw (float): Diameter of the stirrups (shear reinforcement) (mm)\n",
+    "    n_hw (int): Number of stirrups in the considered section\n",
+    "    f_yd (float): Design yield strength of the reinforcement (N/mm^2)\n",
+    "    alfa (float): Partial safety factor or strength reduction factor for concrete\n",
+    "    b (float): Width of the concrete section (mm)\n",
+    "    f_cd (float): Design compressive strength of concrete (N/mm^2)\n",
+    "    h (float): Overall depth of the concrete section (mm)\n",
+    "    beta (float): Factor accounting for the distribution of strains or stresses\n",
+    "    eps_s (float): Strain in the reinforcement\n",
+    "    eps_cu3 (float): Ultimate strain in the concrete\n",
+    "    E_s (float): Modulus of elasticity of the reinforcement (N/mm^2)\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: M_Rd4 (float), N_Rd4 (float)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate intermediate values\n",
+    "    a = c + phi_bgl + phi_hw / 2\n",
+    "    A_s = 1 / 4 * np.pi * phi_hw ** 2 * n_hw\n",
+    "    N_sc4 = E_s * eps_s * A_s\n",
+    "    N_st4 = N_sc4\n",
+    "    N_c4 = b * f_cd * h\n",
+    "    \n",
+    "    # Calculate outputs\n",
+    "    M_Rd4 = 0  # kNm\n",
+    "    N_Rd4 = (N_st4 + N_sc4 + N_c4) / 1e3  # kN\n",
+    "    \n",
+    "    return M_Rd4, N_Rd4\n",
     "\n",
-    "print(f'N_st4 = {N_st4:.3e} N')\n",
-    "print(f'N_sc4 = {N_sc4:.3e} N')\n",
-    "print(f'N_c4 = {N_c4:.3e} N')\n",
-    "print(f'M_Rd4 = {M_Rd4:.1f} kNm')\n",
-    "print(f'N_Rd4 = {N_Rd4:.1f} kN')"
+    "M_Rd4, N_Rd4 = grenssituatie_4(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s)\n",
+    "print(M_Rd4, N_Rd4)"
    ]
   },
   {
@@ -343,34 +397,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N_st_1 = 2.714e+05 N\n",
-      "N_sc_1 = 2.714e+05 N\n",
-      "N_c_1 = 0.000e+00 N\n",
-      "M_Rd_1 = 0.0 kNm\n",
-      "N_Rd_1 = -542.9 kN\n"
+      "0 -542.8672105403163\n"
      ]
     }
    ],
    "source": [
-    "N_sc_1 = E_s * eps_s * A_s\n",
-    "N_st_1 = N_sc_1\n",
-    "# N_c4 = b * f_cd * h\n",
-    "N_c_1 = 0\n",
-    "M_Rd_1 = 0\n",
-    "N_Rd_1 = (-N_st_1 + -N_sc_1 + N_c_1) / 1e3\n",
+    "def grenssituatie_min1(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s):\n",
+    "    \"\"\"\n",
+    "    Calculate the design moment capacity (M_Rd_1) and design axial force capacity (N_Rd_1) \n",
+    "    for a given concrete section with reinforcement considering specific strain conditions.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    c (float): Cover to reinforcement (mm)\n",
+    "    phi_bgl (float): Diameter of the main longitudinal reinforcement (mm)\n",
+    "    phi_hw (float): Diameter of the stirrups (shear reinforcement) (mm)\n",
+    "    n_hw (int): Number of stirrups in the considered section\n",
+    "    f_yd (float): Design yield strength of the reinforcement (N/mm^2)\n",
+    "    alfa (float): Partial safety factor or strength reduction factor for concrete\n",
+    "    b (float): Width of the concrete section (mm)\n",
+    "    f_cd (float): Design compressive strength of concrete (N/mm^2)\n",
+    "    h (float): Overall depth of the concrete section (mm)\n",
+    "    beta (float): Factor accounting for the distribution of strains or stresses\n",
+    "    eps_s (float): Strain in the reinforcement\n",
+    "    eps_cu3 (float): Ultimate strain in the concrete\n",
+    "    E_s (float): Modulus of elasticity of the reinforcement (N/mm^2)\n",
+    "    \n",
+    "    Returns:\n",
+    "    tuple: M_Rd_1 (float), N_Rd_1 (float)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate intermediate values\n",
+    "    A_s = 1 / 4 * np.pi * phi_hw ** 2 * n_hw\n",
+    "    N_sc_1 = E_s * eps_s * A_s\n",
+    "    N_st_1 = N_sc_1\n",
+    "    N_c_1 = 0\n",
+    "    \n",
+    "    # Calculate outputs\n",
+    "    M_Rd_1 = 0  # kNm\n",
+    "    N_Rd_1 = (-N_st_1 + -N_sc_1 + N_c_1) / 1e3  # kN\n",
+    "    \n",
+    "    return M_Rd_1, N_Rd_1\n",
     "\n",
-    "print(f'N_st_1 = {N_st_1:.3e} N')\n",
-    "print(f'N_sc_1 = {N_sc_1:.3e} N')\n",
-    "print(f'N_c_1 = {N_c_1:.3e} N')\n",
-    "print(f'M_Rd_1 = {M_Rd_1:.1f} kNm')\n",
-    "print(f'N_Rd_1 = {N_Rd_1:.1f} kN')"
+    "M_Rd_1, N_Rd_1 = grenssituatie_min1(c, phi_bgl, phi_hw, n_hw, f_yd, alfa, b, f_cd, h, beta, eps_s, eps_cu3, E_s)\n",
+    "print(M_Rd_1, N_Rd_1)"
    ]
   },
   {
@@ -382,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
