emissions/kg building material and costs per sqm added to general materials

--- a/book/basics/general_materials.ipynb
+++ b/book/basics/general_materials.ipynb
@@ -38,8 +38,163 @@
     "| Erection speed                   | Fairy quick                                              | Short construction time                                  | Low construction speed due to the time needed for hardening, reuse of formwork, and influences of the weather | Fast montage, but delivery and hardening times must be accounted for |\n",
     "| Needed construction site          | Limited                                                  | Small                                                    | A lot of space needed for preparation of formwork and reinforcement | Small                                                    |\n",
     "| Hygiene                           | When the correct sections are used, almost no dust collection on certain profiles | Dust is easily collected                                | Very suitable for dust-sensitive structures              | Good, partially dependent on cross-section               |\n",
-    "\n"
+    "\n",
+    "## Environmental Costs and Emissions of Building Materials\n",
+    "\n",
+    "When selecting building materials, it is essential to consider their environmental impacts. Below is a comparison of the environmental costs and emissions associated with concrete, steel, and timber.\n",
+    "\n",
+    "| Material | CO2 Emissions (kg CO2e per ton) | Energy Consumption (MJ per ton) | Other Environmental Impacts |\n",
+    "|----------|---------------------------------|-------------------------------|-----------------------------|\n",
+    "| Concrete | 100-200                         | 1,200-1,600                   | High water usage, resource extraction   |\n",
+    "| Steel    | 1,800-2,000                     | 20,000-35,000                 | Habitat destruction, pollution from mining   |\n",
+    "| Timber   | -600 to -1,200 (carbon storage) | 500-1,000                     | Deforestation if not sustainably sourced   |\n",
+    "\n",
+    "### Life Cycle Assessment (LCA)\n",
+    "\n",
+    "Life Cycle Assessment (LCA) is a comprehensive method used to evaluate the environmental impacts of a product, process, or service throughout its entire life cycle. This methodology takes into account every stage from raw material extraction through production, use, and disposal or recycling. The primary goal of LCA is to identify and quantify the environmental burdens and impacts associated with these stages, providing a thorough understanding of the overall environmental performance.\n",
+    "\n",
+    "#### Key Stages of LCA\n",
+    "\n",
+    "1. **Goal and Scope Definition**: Establishes the objectives, system boundaries, and level of detail for the assessment. This stage defines what the study aims to achieve and the specific aspects to be considered.\n",
+    "\n",
+    "2. **Life Cycle Inventory (LCI)**: Involves data collection and calculation procedures to quantify relevant inputs and outputs of a product system. This includes energy and raw material usage, as well as emissions to air, water, and soil.\n",
+    "\n",
+    "3. **Life Cycle Impact Assessment (LCIA)**: Evaluates the potential environmental impacts based on the LCI results. This step translates inventory data into environmental impacts across various categories.\n",
+    "\n",
+    "4. **Interpretation**: Analyzes the results, draws conclusions, and makes recommendations based on the findings. This stage ensures that the assessment aligns with the initial goals and provides actionable insights.\n",
+    "\n",
+    "#### LCA Categories\n",
+    "\n",
+    "LCA considers several environmental impact categories to provide a holistic view of a product’s environmental performance:\n",
+    "\n",
+    "- **Global Warming Potential (GWP)**: Measures the potential contribution to climate change by greenhouse gases, expressed as kg CO2 equivalent.\n",
+    "- **Energy Consumption**: Total energy used during the life cycle, usually measured in megajoules (MJ).\n",
+    "- **Acidification Potential (AP)**: Assesses the potential to cause acid rain, expressed as kg SO2 equivalent.\n",
+    "- **Eutrophication Potential (EP)**: Evaluates the potential to cause over-fertilization of water bodies, leading to algal blooms, expressed as kg PO4 equivalent.\n",
+    "- **Photochemical Ozone Creation Potential (POCP)**: Measures the potential to form ground-level ozone (smog), expressed as kg C2H4 equivalent.\n",
+    "- **Human Toxicity Potential (HTP)**: Assesses the potential harm to human health from toxic substances, expressed as kg 1,4-DCB (dichlorobenzene) equivalent.\n",
+    "- **Ecotoxicity Potential**: Evaluates the potential harm to ecosystems from toxic substances, expressed as kg 1,4-DCB equivalent.\n",
+    "- **Resource Depletion**: Measures the use of non-renewable resources, typically expressed in terms of kg Sb (antimony) equivalent or other resource metrics.\n",
+    "\n",
+    "#### Applications of LCA\n",
+    "\n",
+    "LCA is widely used across various industries and sectors for several purposes:\n",
+    "\n",
+    "- **Product Development and Improvement**: Helps in designing products with lower environmental impacts.\n",
+    "- **Policy Making**: Informs regulations and standards for sustainable practices.\n",
+    "- **Environmental Reporting**: Provides data for sustainability reports and environmental declarations.\n",
+    "- **Comparative Analysis**: Allows comparison of the environmental impacts of different products or processes.\n",
+    "\n",
+    "#### Benefits of LCA\n",
+    "\n",
+    "- **Comprehensive Analysis**: Considers a broad range of environmental impacts over the entire life cycle.\n",
+    "- **Informed Decision-Making**: Provides valuable insights for improving environmental performance.\n",
+    "- **Sustainability**: Promotes the development of more sustainable products and practices.\n",
+    "\n",
+    "Life Cycle Assessment is an essential tool for understanding and mitigating the environmental impacts of products and services, guiding towards more sustainable solutions. Below is a detailed comparison of LCA categories for timber, concrete, and steel.\n",
+    "\n",
+    "| Category                 | Timber                               | Concrete                             | Steel                                |\n",
+    "|--------------------------|--------------------------------------|--------------------------------------|--------------------------------------|\n",
+    "| **Global Warming Potential (GWP)** | -600 to -1,200 kg CO2e per ton  | 100-200 kg CO2e per ton               | 1,800-2,000 kg CO2e per ton           |\n",
+    "| **Energy Consumption**   | 500-1,000 MJ per ton                 | 1,200-1,600 MJ per ton                | 20,000-35,000 MJ per ton              |\n",
+    "| **Acidification Potential (AP)** | Low impact if sustainably sourced | Moderate impact due to cement production | High impact due to mining and smelting |\n",
+    "| **Eutrophication Potential (EP)** | Low, primarily from forestry operations | Moderate, from cement and aggregate production | High, from mining and production processes |\n",
+    "| **Photochemical Ozone Creation Potential (POCP)** | Low                                    | Moderate                              | High due to industrial emissions     |\n",
+    "| **Human Toxicity Potential (HTP)** | Low                                    | Moderate, dust and emissions during production | High, emissions and waste from mining and production |\n",
+    "| **Ecotoxicity Potential** | Low, if sourced sustainably          | Moderate                              | High, due to pollutants from mining and production |\n",
+    "| **Resource Depletion**   | Renewable resource if managed well   | High, due to non-renewable aggregates and water use | Very high, due to non-renewable ore and energy-intensive processes |\n",
+    "\n",
+    "\n",
+    "### Summary\n",
+    "\n",
+    "Each building material has its own set of environmental impacts. Concrete and steel are associated with high CO2 emissions and energy consumption, whereas timber can act as a carbon sink but requires careful management to prevent deforestation. Sustainable practices and innovative technologies can help mitigate some of these environmental impacts.\n",
+    "\n",
+    "### Sources\n",
+    "\n",
+    "1. Hammond, G., & Jones, C. (2008). Inventory of Carbon & Energy (ICE) Version 1.6a. Sustainable Energy Research Team (SERT), University of Bath.\n",
+    "2. World Steel Association. (2021). Sustainable Steel: Indicators 2021 and steel’s contribution to a low carbon future.\n",
+    "3. International Energy Agency. (2020). Iron and Steel Technology Roadmap.\n",
+    "4. Forest Stewardship Council (FSC). (2021). Benefits of FSC Certification.\n",
+    "5. Habert, G., & Ouellet-Plamondon, C. (2016). Recent\n",
+    "6. International Organization for Standardization (ISO). (2006). ISO 14040: Environmental management - Life cycle assessment - Principles and framework.\n",
+    "7. Guinée, J. B. (2002). Handbook on Life Cycle Assessment: Operational Guide to the ISO Standards. Springer.\n",
+    "8. European Commission - Joint Research Centre - Institute for Environment and Sustainability. (2010). International Reference Life Cycle Data System (ILCD) Handbook: General guide for Life Cycle Assessment - Detailed guidance.\n",
+    "\n",
+    "## Comparison of Steel, Timber, and Concrete Structures in Terms of Costs per Square Meter\n",
+    "\n",
+    "### Introduction\n",
+    "When deciding on the material for constructing a building, it's essential to consider the costs associated with each option. Steel, timber, and concrete are among the most commonly used materials in the construction industry. This comparison will analyze their costs per square meter, taking into account material, labor, and maintenance costs.\n",
+    "\n",
+    "### Steel Structures\n",
+    "\n",
+    "#### Material Costs\n",
+    "- Steel is known for its high strength-to-weight ratio, which can result in a lighter overall structure.\n",
+    "- The cost of steel fluctuates with market conditions but generally ranges from USD 1,200 to 2,500 per ton.\n",
+    "- The cost per square meter typically falls between USD 50 and 150, depending on the complexity and design of the structure.\n",
+    "\n",
+    "#### Labor Costs\n",
+    "- Steel structures often require skilled labor for welding and assembly.\n",
+    "- Labor costs can be higher due to the need for specialized equipment and safety measures.\n",
+    "- Installation costs range from USD 30 to 70 per square meter.\n",
+    "\n",
+    "#### Maintenance Costs\n",
+    "- Steel requires regular maintenance to prevent rust and corrosion.\n",
+    "- Maintenance costs can be significant over the building's lifespan, ranging from USD 1 to 5 per square meter annually.\n",
+    "\n",
+    "#### Total Cost\n",
+    "- **Total Cost per Square Meter:** USD 80 to 225\n",
+    "\n",
+    "### Timber Structures\n",
+    "\n",
+    "#### Material Costs\n",
+    "- Timber is a renewable resource and generally cheaper than steel.\n",
+    "- The cost of timber can vary based on type (e.g., softwood vs. hardwood), with prices ranging from USD 500 to 1,200 per cubic meter.\n",
+    "- The cost per square meter typically falls between USD 30 and 100.\n",
+    "\n",
+    "#### Labor Costs\n",
+    "- Timber construction is often quicker and requires less specialized labor compared to steel.\n",
+    "- Labor costs are generally lower, ranging from USD 20 to 50 per square meter.\n",
+    "\n",
+    "#### Maintenance Costs\n",
+    "- Timber requires protection from pests, rot, and weathering.\n",
+    "- Maintenance costs can be moderate, typically ranging from USD 2 to 6 per square meter annually.\n",
+    "\n",
+    "#### Total Cost\n",
+    "- **Total Cost per Square Meter:** USD 52 to 156\n",
+    "\n",
+    "### Concrete Structures\n",
+    "\n",
+    "#### Material Costs\n",
+    "- Concrete is a versatile and durable material, widely used in various types of construction.\n",
+    "- The cost of concrete can vary based on mix and reinforcement, typically ranging from USD 75 to 150 per cubic meter.\n",
+    "- The cost per square meter typically falls between USD 30 and 120.\n",
+    "\n",
+    "#### Labor Costs\n",
+    "- Concrete structures require formwork, pouring, and curing, which can be labor-intensive.\n",
+    "- Labor costs are generally moderate, ranging from USD 25 to 60 per square meter.\n",
+    "\n",
+    "#### Maintenance Costs\n",
+    "- Concrete is low-maintenance but can require repairs for cracks and spalling over time.\n",
+    "- Maintenance costs are relatively low, typically ranging from USD 1 to 3 per square meter annually.\n",
+    "\n",
+    "#### Total Cost\n",
+    "- **Total Cost per Square Meter:** USD 56 to 183\n",
+    "\n",
+    "### Summary\n",
+    "| Material    | Material Cost (USD per sqm) | Labor Cost (USD per sqm) | Maintenance Cost (USD per sqm annually) | Total Cost (USD per sqm) |\n",
+    "|-------------|--------------------------|-----------------------|--------------------------------------|----------------------|\n",
+    "| **Steel**   | 50 - 150               | 30 - 70             | 1 - 5                              | 80 - 225           |\n",
+    "| **Timber**  | 30 - 100               | 20 - 50             | 2 - 6                              | 52 - 156           |\n",
+    "| **Concrete**| 30 - 120               | 25 - 60             | 1 - 3                              | 56 - 183           |\n",
+    "\n",
+    "### Conclusion\n",
+    "Each material has its own advantages and cost implications. Steel structures tend to be more expensive due to higher material and labor costs but offer high strength and durability. Timber structures are generally more cost-effective and environmentally friendly but require careful maintenance. Concrete structures strike a balance between cost, durability, and maintenance needs. The choice of material should align with the specific requirements and budget constraints of the project.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
