safety text update

--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -6,7 +6,63 @@
    "source": [
     "# Structural safety\n",
     "\n",
-    "## Import libraries"
+    "```{Note}\n",
+    "The information on this page gives a summary of the Loads and Reliability reader, which is part of the safety content of the module CIEM5000 - Structural Engineering Track Base, written by Roel Schipper. In the end an implementation in Python on reliability plots based on his [GitHub repository](https://gitlab.tudelft.nl/roelschipper/ciem5000) will be given.\n",
+    "```\n",
+    "\n",
+    "A structure should be sufficiently safe. This means that the probability of failure should be sufficiently low, but unfortunately enough it can never be 0 %. It is possible to determine the risk of failure of a structure (or more positively formulated: the structural reliability ) by carrying out a probabilistic calculation. There are 3 methods of calculations to deal with uncertainty, with increasing level of complexity (International Organization for Standardization 11 2015). Those are:\n",
+    "- **Semi-probabilistic approach**: Safety format prescribing the design equations and the analysis procedures to be used Default method in the Eurocodes, i.e. to be used for usual design situations.\n",
+    "- **Reliability-based design and assessment**: Reliability requirements to fulfil Unusual design situations in regard to uncertainties, Code calibration.\n",
+    "- **Risk-informed decision making**: Decisions are taken with due consideration of the total risks (e.g. loss of lives, injuries). Exceptional design situations in regard to uncertainties and consequences. Derivation of reliability requirements\n",
+    "\n",
+    " To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
+    "\n",
+    "## Partial factors\n",
+    "The Eurocode defines partial factors for the Effects side (actions) in the prNEN-EN-1990 (2021), while the partial factors on the Resistance side (materials) are defined in the various material codes for steel, concrete, timber, and so forth. This Load/Resistance Factor (LRF) or split factor format approach is used to allocate the different uncertainty of loads (effects) and uncertainty of resistance (strength) where they belong, that is in separate calculations of design values of loads and resistance, respectively.\n",
+    "\n",
+    "```{figure} Images/partial_factors.png\n",
+    "---\n",
+    "---\n",
+    "Partial factors on Effects-side and Resistance side combine various types of uncertainties\n",
+    "```\n",
+    "\n",
+    "## Effect vs Resistance\n",
+    "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the unity check {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
+    "\n",
+    "$$\n",
+    "\\frac{E_d}{R_d} \\leq 1\n",
+    "$$(unity_check)\n",
+    "\n",
+    "- First, both effect E and resistance R are expressed in their characteristic values. For E, this means the value Echar is calculated with a probability of exceedance (overshoot) of 5%. For R, this is the value with a probability of 5% of under shoot, Rchar. This is a standard statistic operation that is done by adding or subtracting 1.64·σ in case of a normal distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
+    "- Second, on the Effect side, γE , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of E {eq}`E_d`, represented by the blue draw line, and for this example the value Ed = 163 (again, unit does not matter here, as long as both R and E are expressed in the same unit).\n",
+    "\n",
+    "$$\n",
+    "E_d = E_{char} \\gamma_E\n",
+    "$$(E_d)\n",
+    "\n",
+    "- Third, on the Resistance side, the characteristic value of the strength or Resistance is divided by γR, the partial material factor, resulting in a dimensioning value of R {eq}`R_d`, represented by the red draw line, and for this example the value Rd = 201 (same unit as E).\n",
+    "\n",
+    "$$\n",
+    "R_d = \\frac{R_{char}}{\\gamma_R}\n",
+    "$$(R_d)\n",
+    "\n",
+    "- Fourth and finally, Ed and Rd are compared, in either of the two following ways: direct comparison Ed ≤ Rd or unity check {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between Ed and Rd.\n",
+    "\n",
+    "\n",
+    "```{figure} Images/E_R_normaldistributions.png\n",
+    "---\n",
+    "---\n",
+    "Example of a normal distribution of Effects (E) and Resistance (R) and the place of\n",
+    "characteristic values Echar and Rchar and design values Ed and Rd. The characteristic\n",
+    "values are obtained by finding from the normal distribution the values with a 5% prob-\n",
+    "ability of exceedance (μE + 1.64 · σE for E and μR − 1.64 · σR for R). The design\n",
+    "values are found by multiplying /dividing the characteristic values with the partial safety\n",
+    "factors γE and γR. The distance on the horizontal axis between Ed and Rd represents \n",
+    "a measure of the unity-check (u.c.). In this example, Ed = 0.81 · Rd. The structure \n",
+    "is more than safe.\n",
+    "```\n",
+    "\n",
+    "## Python implementation"
    ]
   },
   {
@@ -26,13 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Effect vs Resistance\n",
-    "\n",
-    "```{figure} Images/partial_factors.png\n",
-    "---\n",
-    "---\n",
-    "Partial factors on Effects-side and Resistance side combine various types of uncertainties\n",
-    "```"
+    "### Effect vs Resistance plotting function"
    ]
   },
   {
@@ -108,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reliability Z"
+    "### Reliability Z function"
    ]
   },
   {
@@ -189,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize data and plot results"
+    "## Initializing examples with data"
    ]
   },
   {
